--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "foundry-pf2e": "github:reonZ/foundry-pf2e"
+    "foundry-pf2e": "github:Deatrathias/foundry-pf2e"
   }
 }
