--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pf2e-saves-helper",
   "version": "0.0.1",
-  "description": "",
+  "type": "module",
+  "description": "A module to help managing saving throws and applying damage to multiple tokens.",
   "scripts": {
     "build": "esbuild src/scripts/main.ts --bundle --keep-names --minify --sourcemap --outdir=dist/scripts"
   },
@@ -9,11 +10,21 @@
   "author": "Deatrathias",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "esbuild": "0.24.0",
-    "typescript": "^5.6.3"
+    "esbuild": "0.25.9",
+    "eslint": "^9.37.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "foundry-pf2e": "github:Deatrathias/foundry-pf2e"
-  }
+    "foundry-pf2e": "github:7H3LaughingMan/foundry-pf2e",
+    "remeda": "^2.32.0",
+    "vite": "^7.1.10"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Deatrathias/pf2e-saves-helper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Deatrathias/pf2e-saves-helper/issues"
+  },
+  "homepage": "https://github.com/Deatrathias/pf2e-saves-helper#readme"
 }
